--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
+  name             : "Chunxu Yang"
+  pronouns         : # example: "he/his"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Beijing"
   employer         : "Beijing University of Posts and Telecommunications"
