Update bio and employer information in config

--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ author:
   avatar           : "profile.png"
   name             : "Chunxu Yang"
   pronouns         : # example: "he/his"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "a first-year student at Beijing University of Posts and Telecommunications"
   location         : "Beijing"
-  employer         : "Beijing University of Posts and Telecommunications"
+  employer         : "BUPT"
   uri              : # URL
   email            : "yang@chunxu.me" 
 
